added two endpoints:
- /movie-character/random
- /movie-character/by-name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+character.external.api.url=https://rickandmortyapi.com/api/character
+
+spring.devtools.remote.secret=my-secret-key
